--- a/call.html
+++ b/call.html
@@ -1,222 +1,289 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Robô Aviator — Previsor v2</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<meta charset="UTF-8">
+<title>Pro Aquecedores</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Fonte -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
 <style>
-  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:#0d1117;color:#e6edf3;margin:0;padding:18px}
-  h1{text-align:center;margin:0 0 10px}
-  textarea,select{width:100%;padding:10px;border-radius:8px;border:1px solid #30363d;background:#161b22;color:#fff}
-  button{padding:10px 16px;border:0;border-radius:8px;background:#238636;color:#fff;font-weight:700;cursor:pointer;margin-top:10px}
-  .grid{display:grid;gap:12px;grid-template-columns:1fr;max-width:980px;margin:0 auto}
-  .card{background:#161b22;border:1px solid #30363d;border-radius:12px;padding:14px}
-  .big{font-size:28px;font-weight:800}
-  .muted{color:#8b949e}
-  .badge{display:inline-block;padding:2px 8px;border-radius:999px;font-size:12px;margin-left:8px}
-  .green{background:#2ea043;color:#000}
-  .yellow{background:#d29922;color:#000}
-  .red{background:#da3633}
-  canvas{background:#fff;border-radius:10px}
-  .row{display:flex;gap:10px;flex-wrap:wrap}
-  .kpi{background:#0b0f14;border:1px solid #30363d;border-radius:10px;padding:8px 10px}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Inter',sans-serif}
+html{scroll-behavior:smooth}
+body{background:#fff;color:#222}
+
+/* HEADER */
+header{
+position:fixed;top:0;left:0;width:100%;
+background:#fff;
+display:flex;align-items:center;justify-content:space-between;
+padding:15px 8%;
+box-shadow:0 2px 8px rgba(0,0,0,.08);
+z-index:1000
+}
+header img{height:45px}
+nav a{
+margin:0 15px;
+text-decoration:none;
+color:#222;
+font-weight:500
+}
+nav a:hover{color:#d62828}
+.btn-contato{
+background:#d62828;
+color:#fff;
+padding:10px 18px;
+border-radius:6px;
+text-decoration:none;
+font-weight:600
+}
+
+/* HERO */
+.hero{
+margin-top:80px;
+height:85vh;
+background:
+linear-gradient(rgba(214,40,40,.65),rgba(214,40,40,.65)),
+url('https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=1920') center/cover;
+display:flex;
+align-items:center;
+justify-content:flex-end;
+padding:0 10%
+}
+.hero h1{
+color:#fff;
+font-size:48px;
+max-width:520px;
+text-align:right
+}
+
+/* SECTION */
+section{padding:90px 8%}
+
+/* SOBRE */
+.sobre{
+display:grid;
+grid-template-columns:1fr 1fr;
+gap:60px;
+align-items:center
+}
+.sobre h2{
+font-size:42px;
+color:#d62828;
+margin-bottom:20px
+}
+.sobre p{
+line-height:1.7;
+font-size:17px;
+margin-bottom:18px
+}
+.btn-whats{
+display:inline-block;
+margin-top:15px;
+background:#d62828;
+color:#fff;
+padding:14px 28px;
+border-radius:6px;
+text-decoration:none;
+font-weight:600
+}
+
+/* VANTAGENS */
+.vantagens{
+background:
+url('https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=1200') left/cover no-repeat,
+#f6f6f6;
+display:grid;
+grid-template-columns:1fr 1fr;
+align-items:center
+}
+.vantagens h2{
+color:#d62828;
+font-size:38px;
+margin-bottom:25px
+}
+.vantagens ul{list-style:none}
+.vantagens li{
+font-size:20px;
+margin-bottom:15px;
+display:flex;
+align-items:center;
+gap:12px
+}
+
+/* PROFISSIONAIS */
+.profissionais{
+background:
+linear-gradient(rgba(214,40,40,.85),rgba(214,40,40,.85)),
+url('https://images.unsplash.com/photo-1600880292203-757bb62b4baf?q=80&w=1200') center/cover;
+color:#fff;
+text-align:right
+}
+.profissionais h2{font-size:48px}
+
+/* SERVIÇOS */
+.servicos{text-align:center}
+.servicos h2{font-size:40px;margin-bottom:50px}
+.cards{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+gap:30px
+}
+.card{
+position:relative;
+height:260px;
+border-radius:14px;
+overflow:hidden;
+cursor:pointer
+}
+.card img{
+width:100%;
+height:100%;
+object-fit:cover
+}
+.card span{
+position:absolute;
+bottom:15px;
+left:15px;
+color:#fff;
+font-size:20px;
+font-weight:700
+}
+
+/* CTA */
+.cta{text-align:center}
+.cta h2{font-size:42px;margin-bottom:30px}
+.cta a{
+background:#d62828;
+color:#fff;
+padding:16px 34px;
+border-radius:8px;
+font-size:18px;
+text-decoration:none;
+font-weight:700
+}
+
+/* FOOTER */
+footer{
+background:#d62828;
+color:#fff;
+padding:60px 8% 30px
+}
+.footer-grid{
+display:grid;
+grid-template-columns:2fr 2fr 1fr;
+gap:40px;
+margin-bottom:30px
+}
+footer h3{margin-bottom:15px}
+footer p,footer a{color:#fff;text-decoration:none;margin-bottom:8px;display:block}
+.copy{
+text-align:center;
+border-top:1px solid rgba(255,255,255,.3);
+padding-top:20px;
+font-size:14px
+}
+
+/* MOBILE */
+@media(max-width:900px){
+.hero{justify-content:center;text-align:center}
+.hero h1{text-align:center;font-size:34px}
+.sobre,.vantagens{grid-template-columns:1fr}
+.profissionais{text-align:center}
+}
 </style>
 </head>
+
 <body>
-  <h1>📊 Robô Aviator — Previsor v2</h1>
-  <div class="grid">
 
-    <div class="card">
-      <p>Cole os resultados (separados por vírgula). Ex.: <span class="muted">1.10, 1.45, 2.30, 10.00, 1.20</span></p>
-      <textarea id="inp" rows="4"></textarea>
-      <div class="row">
-        <label>Janela: 
-          <select id="win">
-            <option value="20">últimas 20</option>
-            <option value="30" selected>últimas 30</option>
-            <option value="50">últimas 50</option>
-          </select>
-        </label>
-        <label>Trim superior (cortar explosões): 
-          <select id="trim">
-            <option value="0.10">10%</option>
-            <option value="0.15" selected>15%</option>
-            <option value="0.20">20%</option>
-          </select>
-        </label>
-        <label>Peso da recência (EW): 
-          <select id="decay">
-            <option value="0.95">suave</option>
-            <option value="0.92" selected>médio</option>
-            <option value="0.88">forte</option>
-          </select>
-        </label>
-      </div>
-      <button onclick="run()">Analisar</button>
-    </div>
+<header>
+<img src="https://i.imgur.com/8ZQZ7Zy.png" alt="Pro Aquecedores">
+<nav>
+<a href="#inicio">Início</a>
+<a href="#servicos">Serviços</a>
+<a href="#sobre">Quem Somos</a>
+<a class="btn-contato" href="#contato">Contato</a>
+</nav>
+</header>
 
-    <div class="card" id="out">
-      <div class="big" id="pred">—</div>
-      <div class="muted" id="explain">Cole os resultados e clique em Analisar.</div>
-      <div class="row" style="margin-top:8px">
-        <div class="kpi" id="seq">Seq. baixas: —</div>
-        <div class="kpi" id="since">Desde última >10x: —</div>
-        <div class="kpi" id="ratio">% >5x: —</div>
-        <div class="kpi" id="std">Volatilidade: —</div>
-      </div>
-    </div>
+<section class="hero" id="inicio">
+<h1>Tenha o conforto que sua família e seu lar merecem.</h1>
+</section>
 
-    <div class="card">
-      <canvas id="ch" height="120"></canvas>
-    </div>
+<section class="sobre" id="sobre">
+<div>
+<h2>Descubra o conforto dos aquecedores de água a gás</h2>
+<p><strong>A Pro Aquecedores</strong> possui soluções completas em aquecedores e pressurizadores a gás, com serviços de manutenção, venda e instalação.</p>
+<p>Com profissionais altamente capacitados e ampla experiência no mercado, nosso compromisso é proporcionar conforto e qualidade.</p>
+<a class="btn-whats" href="https://wa.me/5551998961031" target="_blank">Converse com a gente</a>
+</div>
+<img src="https://images.unsplash.com/photo-1600566753376-12c8ab7fb75b?q=80&w=900" style="width:100%;border-radius:12px">
+</section>
 
-  </div>
+<section class="vantagens">
+<div></div>
+<div>
+<h2>Algumas Vantagens</h2>
+<ul>
+<li>🔥 Conforto e Comodidade</li>
+<li>🛁 Banhos Relaxantes</li>
+<li>🌡️ Ajuste de Temperatura</li>
+<li>⚡ Economia de Energia</li>
+</ul>
+</div>
+</section>
 
-<script>
-function parseVals(){
-  const raw = document.getElementById('inp').value;
-  return raw.split(',').map(s=>parseFloat(String(s).replace(/[^\d.]/g,'')))
-             .filter(v=>!isNaN(v)&&v>0);
-}
-function lastN(arr,n){ return arr.slice(-n); }
-function quantile(arr,q){
-  if(arr.length===0) return 0;
-  const a=[...arr].sort((x,y)=>x-y);
-  const idx = (a.length-1)*q;
-  const lo = Math.floor(idx), hi=Math.ceil(idx);
-  if(lo===hi) return a[lo];
-  return a[lo] + (a[hi]-a[lo])*(idx-lo);
-}
-function winsorizeTop(arr,qTop){
-  const q=quantile(arr, 1-qTop); // ex.: 0.85 p/ trim 15%
-  return arr.map(v=>Math.min(v,q));
-}
-function expWeightedMean(arr, decay){
-  // decay in (0,1). Newer points get more weight.
-  const n=arr.length;
-  let wsum=0, xsum=0;
-  for(let i=0;i<n;i++){
-    const w = Math.pow(decay, n-1-i);
-    wsum += w; xsum += w*arr[i];
-  }
-  return xsum/wsum;
-}
-function expWeightedStd(arr, decay){
-  const mean = expWeightedMean(arr,decay);
-  const n=arr.length;
-  let wsum=0, ssum=0;
-  for(let i=0;i<n;i++){
-    const w = Math.pow(decay, n-1-i);
-    wsum += w; ssum += w*Math.pow(arr[i]-mean,2);
-  }
-  return Math.sqrt(ssum/wsum);
-}
-function consecutiveLowsEnd(arr, thr=2.0){
-  let c=0;
-  for(let i=arr.length-1;i>=0;i--){
-    if(arr[i]<=thr) c++; else break;
-  }
-  return c;
-}
-function sinceLastHigh(arr, thr=10.0){
-  for(let i=arr.length-1;i>=0;i--){
-    if(arr[i]>thr) return arr.length-1-i;
-  }
-  return Infinity;
-}
-function ratioAbove(arr, thr){ return arr.filter(v=>v>thr).length/arr.length; }
+<section class="profissionais">
+<h2>Profissionais com ampla experiência</h2>
+</section>
 
-let chart;
+<section class="servicos" id="servicos">
+<h2>Trabalhamos com as melhores marcas do mercado</h2>
+<div class="cards">
+<div class="card">
+<img src="https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=800">
+<span>Instalação</span>
+</div>
+<div class="card">
+<img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?q=80&w=800">
+<span>Manutenção</span>
+</div>
+<div class="card">
+<img src="https://images.unsplash.com/photo-1618220179428-22790b461013?q=80&w=800">
+<span>Venda</span>
+</div>
+</div>
+</section>
 
-function run(){
-  const vals = parseVals();
-  const win = parseInt(document.getElementById('win').value||30);
-  const trim = parseFloat(document.getElementById('trim').value||0.15);
-  const decay = parseFloat(document.getElementById('decay').value||0.92);
+<section class="cta" id="contato">
+<h2>Entre em contato e conheça a melhor solução para você.</h2>
+<a href="https://wa.me/5551998961031" target="_blank">Atendimento Online</a>
+</section>
 
-  if(vals.length<5){ alert('Cole pelo menos 5 valores.'); return; }
+<footer>
+<div class="footer-grid">
+<div>
+<img src="https://i.imgur.com/8ZQZ7Zy.png" style="height:40px;margin-bottom:15px">
+</div>
+<div>
+<h3>Contato</h3>
+<p>📞 (51) 9 9896-1031</p>
+<p>✉️ proaquecedores@gmail.com</p>
+<p>📍 Canoas - RS</p>
+</div>
+<div>
+<h3>Menu</h3>
+<a href="#inicio">Início</a>
+<a href="#servicos">Serviços</a>
+<a href="#sobre">Quem Somos</a>
+<a href="#contato">Contato</a>
+</div>
+</div>
+<div class="copy">
+© 2023 Todos os Direitos Reservados. Pro Aquecedores
+</div>
+</footer>
 
-  const v = lastN(vals, win);
-  // --- robustez contra explosões ---
-  const vWins = winsorizeTop(v, trim); // corta topo (ex.: 15%)
-  // --- baseline com peso de recência ---
-  const base = expWeightedMean(vWins, decay);
-  let pred = base;
-
-  // --- features ---
-  const consecLow = consecutiveLowsEnd(v, 2.0);
-  const sinceHigh = sinceLastHigh(v, 10.0);
-  const hi5ratio = ratioAbove(v, 5.0);
-  const vol = expWeightedStd(vWins, decay);
-
-  // --- ajustes heurísticos calibrados ---
-  // sequências baixas empurram a previsão para cima (até +1.2)
-  pred += 0.18 * Math.min(consecLow, 6);
-
-  // alta recente puxa para baixo; se faz tempo sem alta, leve alta
-  if (isFinite(sinceHigh)) {
-    if (sinceHigh <= 3) pred -= [0.35,0.25,0.15,0.08][sinceHigh] ?? 0.05;
-    if (sinceHigh >= 8) pred += 0.25;
-  } else {
-    // nunca teve >10x na janela
-    pred += 0.10;
-  }
-
-  // regime com muitas >5x eleva levemente
-  if (hi5ratio > 0.20) pred += 0.15 + 0.5*(hi5ratio-0.20);
-
-  // limitar a faixa útil
-  pred = Math.max(1.10, Math.min(pred, 12.0));
-
-  // --- intervalo de confiança (80%) a partir da volatilidade ponderada ---
-  const icWidth = Math.max(0.4, 0.9*vol); // largura depende da vol
-  let lo = Math.max(1.00, pred - icWidth);
-  let hi = pred + icWidth;
-
-  // --- confiança qualitativa ---
-  let score = 0;
-  if (consecLow>=4) score++;
-  if (sinceHigh>=10 || !isFinite(sinceHigh)) score++;
-  if (vol<2.2) score++;
-  if (sinceHigh<=2) score--;           // alta muito recente reduz confiança
-  if (vol>4.5) score--;
-  const conf = (score>=2) ? 'alta' : (score>=0 ? 'média' : 'baixa');
-  const confBadge = (score>=2) ? 'green' : (score>=0 ? 'yellow' : 'red');
-
-  // --- saída principal ---
-  const predTxt = `📊 Próxima rodada prevista: ~${pred.toFixed(2)}x ` +
-                  `<span class="badge ${confBadge}">Confiança: ${conf}</span><br>` +
-                  `<span class="muted">IC80%: ${lo.toFixed(2)}x – ${hi.toFixed(2)}x</span>`;
-  document.getElementById('pred').innerHTML = predTxt;
-
-  document.getElementById('explain').innerHTML =
-    `Base: média ponderada winsorizada = ${base.toFixed(2)}x • ` +
-    `ajustes: seq=${consecLow}, desde_alta=${isFinite(sinceHigh)?sinceHigh:'nenhuma'}, ` +
-    `%>5x=${(hi5ratio*100).toFixed(0)}%`;
-
-  document.getElementById('seq').textContent = `Seq. baixas: ${consecLow}`;
-  document.getElementById('since').textContent = `Desde última >10x: ${isFinite(sinceHigh)?sinceHigh+' rod.':'nenhuma'}`;
-  document.getElementById('ratio').textContent = `% >5x: ${(hi5ratio*100).toFixed(0)}%`;
-  document.getElementById('std').textContent = `Volatilidade: ${vol.toFixed(2)}`;
-
-  // --- gráfico ---
-  const ctx = document.getElementById('ch').getContext('2d');
-  if(chart) chart.destroy();
-  chart = new Chart(ctx,{
-    type:'line',
-    data:{
-      labels: v.map((_,i)=>i+1),
-      datasets:[
-        {label:'Histórico', data:v, borderColor:'#2ea043', backgroundColor:'rgba(46,160,67,.2)', tension:.3, fill:true,
-         pointBackgroundColor: v.map(x=>x>10?'red':'#2ea043'), pointRadius:v.map(x=>x>10?6:3)},
-        {label:'Média ponderada', data:Array(v.length).fill(base), borderColor:'orange', borderDash:[5,5], pointRadius:0},
-        {label:'Prevista', data:Array(v.length-1).fill(null).concat([pred]), borderColor:'#58a6ff', pointRadius:5}
-      ]
-    },
-    options:{plugins:{legend:{labels:{color:'#000'}}}, scales:{x:{ticks:{color:'#000'}},y:{ticks:{color:'#000'}}}}
-  });
-}
-</script>
 </body>
 </html>
