--- a/call.html
+++ b/call.html
@@ -5,7 +5,6 @@
 <title>Pro Aquecedores</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Fonte -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
@@ -18,98 +17,93 @@ header{
 position:fixed;top:0;left:0;width:100%;
 background:#fff;
 display:flex;align-items:center;justify-content:space-between;
-padding:15px 8%;
+padding:14px 6%;
 box-shadow:0 2px 8px rgba(0,0,0,.08);
 z-index:1000
 }
-header img{height:45px}
+header img{height:42px}
+nav{display:flex;align-items:center}
 nav a{
-margin:0 15px;
+margin:0 12px;
 text-decoration:none;
 color:#222;
 font-weight:500
 }
-nav a:hover{color:#d62828}
 .btn-contato{
 background:#d62828;
 color:#fff;
-padding:10px 18px;
+padding:10px 16px;
 border-radius:6px;
-text-decoration:none;
 font-weight:600
 }
 
 /* HERO */
 .hero{
 margin-top:80px;
-height:85vh;
+min-height:85vh;
 background:
 linear-gradient(rgba(214,40,40,.65),rgba(214,40,40,.65)),
 url('https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=1920') center/cover;
 display:flex;
 align-items:center;
 justify-content:flex-end;
-padding:0 10%
+padding:0 8%
 }
 .hero h1{
 color:#fff;
-font-size:48px;
+font-size:46px;
 max-width:520px;
 text-align:right
 }
 
 /* SECTION */
-section{padding:90px 8%}
+section{padding:80px 6%}
 
 /* SOBRE */
 .sobre{
 display:grid;
 grid-template-columns:1fr 1fr;
-gap:60px;
+gap:50px;
 align-items:center
 }
 .sobre h2{
-font-size:42px;
+font-size:40px;
 color:#d62828;
-margin-bottom:20px
+margin-bottom:18px
 }
 .sobre p{
 line-height:1.7;
-font-size:17px;
-margin-bottom:18px
+font-size:16px;
+margin-bottom:16px
 }
 .btn-whats{
 display:inline-block;
-margin-top:15px;
+margin-top:10px;
 background:#d62828;
 color:#fff;
-padding:14px 28px;
+padding:14px 26px;
 border-radius:6px;
-text-decoration:none;
-font-weight:600
+font-weight:600;
+text-decoration:none
 }
 
 /* VANTAGENS */
 .vantagens{
-background:
-url('https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=1200') left/cover no-repeat,
-#f6f6f6;
+background:#f6f6f6;
 display:grid;
 grid-template-columns:1fr 1fr;
-align-items:center
+align-items:center;
+gap:40px
 }
 .vantagens h2{
 color:#d62828;
-font-size:38px;
-margin-bottom:25px
+font-size:36px;
+margin-bottom:20px
 }
 .vantagens ul{list-style:none}
 .vantagens li{
-font-size:20px;
-margin-bottom:15px;
-display:flex;
-align-items:center;
-gap:12px
+font-size:19px;
+margin-bottom:14px
 }
 
 /* PROFISSIONAIS */
@@ -120,22 +114,21 @@ url('https://images.unsplash.com/photo-1600880292203-757bb62b4baf?q=80&w=1200') 
 color:#fff;
 text-align:right
 }
-.profissionais h2{font-size:48px}
+.profissionais h2{font-size:46px}
 
 /* SERVIÇOS */
 .servicos{text-align:center}
-.servicos h2{font-size:40px;margin-bottom:50px}
+.servicos h2{font-size:38px;margin-bottom:40px}
 .cards{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:30px
+grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+gap:26px
 }
 .card{
-position:relative;
-height:260px;
+height:240px;
 border-radius:14px;
 overflow:hidden;
-cursor:pointer
+position:relative
 }
 .card img{
 width:100%;
@@ -153,44 +146,76 @@ font-weight:700
 
 /* CTA */
 .cta{text-align:center}
-.cta h2{font-size:42px;margin-bottom:30px}
+.cta h2{font-size:38px;margin-bottom:25px}
 .cta a{
 background:#d62828;
 color:#fff;
 padding:16px 34px;
 border-radius:8px;
 font-size:18px;
-text-decoration:none;
-font-weight:700
+font-weight:700;
+text-decoration:none
 }
 
 /* FOOTER */
 footer{
 background:#d62828;
 color:#fff;
-padding:60px 8% 30px
+padding:50px 6% 25px
 }
 .footer-grid{
 display:grid;
 grid-template-columns:2fr 2fr 1fr;
-gap:40px;
-margin-bottom:30px
+gap:35px;
+margin-bottom:25px
 }
-footer h3{margin-bottom:15px}
-footer p,footer a{color:#fff;text-decoration:none;margin-bottom:8px;display:block}
+footer h3{margin-bottom:14px}
+footer p,footer a{color:#fff;text-decoration:none;margin-bottom:6px;display:block}
 .copy{
 text-align:center;
 border-top:1px solid rgba(255,255,255,.3);
-padding-top:20px;
+padding-top:15px;
 font-size:14px
+}
+
+/* WHATSAPP FLUTUANTE */
+.whatsapp-float{
+position:fixed;
+bottom:20px;
+right:20px;
+width:60px;
+height:60px;
+background:#25d366;
+border-radius:50%;
+display:flex;
+align-items:center;
+justify-content:center;
+box-shadow:0 6px 18px rgba(0,0,0,.25);
+z-index:9999
+}
+.whatsapp-float img{
+width:32px;
+height:32px
 }
 
 /* MOBILE */
 @media(max-width:900px){
-.hero{justify-content:center;text-align:center}
-.hero h1{text-align:center;font-size:34px}
+header{padding:12px 5%}
+nav a{display:none}
+.hero{
+justify-content:center;
+text-align:center;
+padding:0 6%
+}
+.hero h1{
+font-size:30px;
+text-align:center
+}
+section{padding:60px 5%}
 .sobre,.vantagens{grid-template-columns:1fr}
 .profissionais{text-align:center}
+.profissionais h2{font-size:34px}
+.footer-grid{grid-template-columns:1fr;text-align:center}
 }
 </style>
 </head>
@@ -198,7 +223,7 @@ font-size:14px
 <body>
 
 <header>
-<img src="https://i.imgur.com/8ZQZ7Zy.png" alt="Pro Aquecedores">
+<img src="https://i.imgur.com/8ZQZ7Zy.png">
 <nav>
 <a href="#inicio">Início</a>
 <a href="#servicos">Serviços</a>
@@ -214,8 +239,8 @@ font-size:14px
 <section class="sobre" id="sobre">
 <div>
 <h2>Descubra o conforto dos aquecedores de água a gás</h2>
-<p><strong>A Pro Aquecedores</strong> possui soluções completas em aquecedores e pressurizadores a gás, com serviços de manutenção, venda e instalação.</p>
-<p>Com profissionais altamente capacitados e ampla experiência no mercado, nosso compromisso é proporcionar conforto e qualidade.</p>
+<p><strong>A Pro Aquecedores</strong> possui soluções completas em aquecedores e pressurizadores a gás.</p>
+<p>Com profissionais altamente capacitados, garantimos conforto e qualidade.</p>
 <a class="btn-whats" href="https://wa.me/5551998961031" target="_blank">Converse com a gente</a>
 </div>
 <img src="https://images.unsplash.com/photo-1600566753376-12c8ab7fb75b?q=80&w=900" style="width:100%;border-radius:12px">
@@ -241,18 +266,9 @@ font-size:14px
 <section class="servicos" id="servicos">
 <h2>Trabalhamos com as melhores marcas do mercado</h2>
 <div class="cards">
-<div class="card">
-<img src="https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=800">
-<span>Instalação</span>
-</div>
-<div class="card">
-<img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?q=80&w=800">
-<span>Manutenção</span>
-</div>
-<div class="card">
-<img src="https://images.unsplash.com/photo-1618220179428-22790b461013?q=80&w=800">
-<span>Venda</span>
-</div>
+<div class="card"><img src="https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=800"><span>Instalação</span></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?q=80&w=800"><span>Manutenção</span></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1618220179428-22790b461013?q=80&w=800"><span>Venda</span></div>
 </div>
 </section>
 
@@ -263,14 +279,12 @@ font-size:14px
 
 <footer>
 <div class="footer-grid">
-<div>
-<img src="https://i.imgur.com/8ZQZ7Zy.png" style="height:40px;margin-bottom:15px">
-</div>
+<div><img src="https://i.imgur.com/8ZQZ7Zy.png" style="height:40px"></div>
 <div>
 <h3>Contato</h3>
-<p>📞 (51) 9 9896-1031</p>
-<p>✉️ proaquecedores@gmail.com</p>
-<p>📍 Canoas - RS</p>
+<p>(51) 9 9896-1031</p>
+<p>proaquecedores@gmail.com</p>
+<p>Canoas - RS</p>
 </div>
 <div>
 <h3>Menu</h3>
@@ -280,10 +294,13 @@ font-size:14px
 <a href="#contato">Contato</a>
 </div>
 </div>
-<div class="copy">
-© 2023 Todos os Direitos Reservados. Pro Aquecedores
-</div>
+<div class="copy">© 2023 Pro Aquecedores</div>
 </footer>
+
+<!-- BOTÃO WHATSAPP -->
+<a class="whatsapp-float" href="https://wa.me/5551998961031" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+</a>
 
 </body>
 </html>
