Atualizar o call.html

--- a/call.html
+++ b/call.html
@@ -2,305 +2,199 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Pro Aquecedores</title>
+<title>Vitória Fotografia | Niterói - RJ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<meta name="description" content="Vitória Resinente - Fotógrafa profissional em Niterói RJ. Ensaios, casamentos e eventos.">
+
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Inter',sans-serif}
-html{scroll-behavior:smooth}
-body{background:#fff;color:#222}
-
-/* HEADER */
-header{
-position:fixed;top:0;left:0;width:100%;
-background:#fff;
-display:flex;align-items:center;justify-content:space-between;
-padding:14px 6%;
-box-shadow:0 2px 8px rgba(0,0,0,.08);
-z-index:1000
+:root{
+  --primary:#111;
+  --accent:#c49b63;
+  --bg:#f7f7f7;
 }
-header img{height:42px}
-nav{display:flex;align-items:center}
-nav a{
-margin:0 12px;
-text-decoration:none;
-color:#222;
-font-weight:500
-}
-.btn-contato{
-background:#d62828;
-color:#fff;
-padding:10px 16px;
-border-radius:6px;
-font-weight:600
-}
+*{margin:0;padding:0;box-sizing:border-box}
+body{font-family:'Inter',sans-serif;background:var(--bg);color:#333}
 
 /* HERO */
-.hero{
-margin-top:80px;
-min-height:85vh;
-background:
-linear-gradient(rgba(214,40,40,.65),rgba(214,40,40,.65)),
-url('https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=1920') center/cover;
-display:flex;
-align-items:center;
-justify-content:flex-end;
-padding:0 8%
+header{
+  background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),
+  url('https://images.unsplash.com/photo-1493863641943-9b68992a8d07?auto=format&fit=crop&w=1600&q=80');
+  background-size:cover;
+  background-position:center;
+  color:#fff;
+  padding:100px 20px;
+  text-align:center;
 }
-.hero h1{
-color:#fff;
-font-size:46px;
-max-width:520px;
-text-align:right
-}
-
-/* SECTION */
-section{padding:80px 6%}
-
-/* SOBRE */
-.sobre{
-display:grid;
-grid-template-columns:1fr 1fr;
-gap:50px;
-align-items:center
-}
-.sobre h2{
-font-size:40px;
-color:#d62828;
-margin-bottom:18px
-}
-.sobre p{
-line-height:1.7;
-font-size:16px;
-margin-bottom:16px
-}
-.btn-whats{
-display:inline-block;
-margin-top:10px;
-background:#d62828;
-color:#fff;
-padding:14px 26px;
-border-radius:6px;
-font-weight:600;
-text-decoration:none
+header h1{font-family:'Playfair Display',serif;font-size:48px}
+header p{margin:20px auto;max-width:700px;font-size:18px}
+.cta{
+  display:inline-block;
+  padding:15px 30px;
+  background:var(--accent);
+  color:#fff;
+  text-decoration:none;
+  border-radius:50px;
+  font-weight:600;
 }
 
-/* VANTAGENS */
-.vantagens{
-background:#f6f6f6;
-display:grid;
-grid-template-columns:1fr 1fr;
-align-items:center;
-gap:40px
-}
-.vantagens h2{
-color:#d62828;
-font-size:36px;
-margin-bottom:20px
-}
-.vantagens ul{list-style:none}
-.vantagens li{
-font-size:19px;
-margin-bottom:14px
+/* SECTIONS */
+section{padding:80px 20px;max-width:1100px;margin:auto}
+.section-title{text-align:center;margin-bottom:40px}
+.section-title h2{font-family:'Playfair Display',serif;font-size:36px}
+
+.services{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
+.service{background:#fff;padding:30px;border-radius:12px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.05)}
+
+.portfolio{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px}
+.portfolio img{width:100%;border-radius:12px}
+
+.about{display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center}
+.about img{width:100%;border-radius:12px}
+
+.testimonials{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:30px}
+.testimonial{background:#fff;padding:25px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.05)}
+
+.contact{text-align:center;background:#111;color:#fff;padding:80px 20px}
+footer{background:#000;color:#aaa;text-align:center;padding:20px}
+
+/* WHATSAPP */
+.whatsapp{
+  position:fixed;right:20px;bottom:20px;
+  background:#25d366;color:#fff;
+  padding:15px 18px;border-radius:50%;
+  font-size:22px;text-decoration:none;
 }
 
-/* PROFISSIONAIS */
-.profissionais{
-background:
-linear-gradient(rgba(214,40,40,.85),rgba(214,40,40,.85)),
-url('https://images.unsplash.com/photo-1600880292203-757bb62b4baf?q=80&w=1200') center/cover;
-color:#fff;
-text-align:right
+/* POPUP */
+.popup-bg{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,.6);
+  display:none;align-items:center;justify-content:center;
+  z-index:9999;
 }
-.profissionais h2{font-size:46px}
-
-/* SERVIÇOS */
-.servicos{text-align:center}
-.servicos h2{font-size:38px;margin-bottom:40px}
-.cards{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:26px
+.popup{
+  background:#fff;
+  padding:30px;
+  max-width:400px;
+  width:90%;
+  border-radius:15px;
+  text-align:center;
 }
-.card{
-height:240px;
-border-radius:14px;
-overflow:hidden;
-position:relative
+.popup h3{font-family:'Playfair Display',serif;margin-bottom:10px}
+.popup input{
+  width:100%;
+  padding:12px;
+  margin:10px 0;
+  border-radius:8px;
+  border:1px solid #ccc;
 }
-.card img{
-width:100%;
-height:100%;
-object-fit:cover
+.popup button{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:50px;
+  background:var(--accent);
+  color:#fff;
+  font-size:16px;
+  cursor:pointer;
 }
-.card span{
-position:absolute;
-bottom:15px;
-left:15px;
-color:#fff;
-font-size:20px;
-font-weight:700
-}
-
-/* CTA */
-.cta{text-align:center}
-.cta h2{font-size:38px;margin-bottom:25px}
-.cta a{
-background:#d62828;
-color:#fff;
-padding:16px 34px;
-border-radius:8px;
-font-size:18px;
-font-weight:700;
-text-decoration:none
-}
-
-/* FOOTER */
-footer{
-background:#d62828;
-color:#fff;
-padding:50px 6% 25px
-}
-.footer-grid{
-display:grid;
-grid-template-columns:2fr 2fr 1fr;
-gap:35px;
-margin-bottom:25px
-}
-footer h3{margin-bottom:14px}
-footer p,footer a{color:#fff;text-decoration:none;margin-bottom:6px;display:block}
-.copy{
-text-align:center;
-border-top:1px solid rgba(255,255,255,.3);
-padding-top:15px;
-font-size:14px
-}
-
-/* WHATSAPP FLUTUANTE */
-.whatsapp-float{
-position:fixed;
-bottom:20px;
-right:20px;
-width:60px;
-height:60px;
-background:#25d366;
-border-radius:50%;
-display:flex;
-align-items:center;
-justify-content:center;
-box-shadow:0 6px 18px rgba(0,0,0,.25);
-z-index:9999
-}
-.whatsapp-float img{
-width:32px;
-height:32px
-}
-
-/* MOBILE */
-@media(max-width:900px){
-header{padding:12px 5%}
-nav a{display:none}
-.hero{
-justify-content:center;
-text-align:center;
-padding:0 6%
-}
-.hero h1{
-font-size:30px;
-text-align:center
-}
-section{padding:60px 5%}
-.sobre,.vantagens{grid-template-columns:1fr}
-.profissionais{text-align:center}
-.profissionais h2{font-size:34px}
-.footer-grid{grid-template-columns:1fr;text-align:center}
-}
+.popup small{display:block;margin-top:10px;color:#777}
+.close{margin-top:15px;cursor:pointer;color:#999}
 </style>
 </head>
 
 <body>
 
 <header>
-<img src="https://i.imgur.com/8ZQZ7Zy.png">
-<nav>
-<a href="#inicio">Início</a>
-<a href="#servicos">Serviços</a>
-<a href="#sobre">Quem Somos</a>
-<a class="btn-contato" href="#contato">Contato</a>
-</nav>
+  <h1>Vitória Fotografia</h1>
+  <p>Capturando momentos especiais com qualidade e profissionalismo em Niterói – RJ</p>
+  <a class="cta" href="#" onclick="abrirPopup()">Quero orçamento</a>
 </header>
 
-<section class="hero" id="inicio">
-<h1>Tenha o conforto que sua família e seu lar merecem.</h1>
+<section>
+  <div class="section-title"><h2>Serviços</h2></div>
+  <div class="services">
+    <div class="service"><h3>Ensaios</h3><p>Feminino, gestante e profissional.</p></div>
+    <div class="service"><h3>Casamentos</h3><p>Registro completo do seu grande dia.</p></div>
+    <div class="service"><h3>Eventos</h3><p>Cobertura social e corporativa.</p></div>
+  </div>
 </section>
 
-<section class="sobre" id="sobre">
-<div>
-<h2>Descubra o conforto dos aquecedores de água a gás</h2>
-<p><strong>A Pro Aquecedores</strong> possui soluções completas em aquecedores e pressurizadores a gás.</p>
-<p>Com profissionais altamente capacitados, garantimos conforto e qualidade.</p>
-<a class="btn-whats" href="https://wa.me/5551998961031" target="_blank">Converse com a gente</a>
-</div>
-<img src="https://images.unsplash.com/photo-1600566753376-12c8ab7fb75b?q=80&w=900" style="width:100%;border-radius:12px">
+<section>
+  <div class="section-title"><h2>Portfólio</h2></div>
+  <div class="portfolio">
+    <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91">
+    <img src="https://images.unsplash.com/photo-1520857014576-2c4f4c972b57">
+    <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee">
+  </div>
 </section>
 
-<section class="vantagens">
-<div></div>
-<div>
-<h2>Algumas Vantagens</h2>
-<ul>
-<li>🔥 Conforto e Comodidade</li>
-<li>🛁 Banhos Relaxantes</li>
-<li>🌡️ Ajuste de Temperatura</li>
-<li>⚡ Economia de Energia</li>
-</ul>
-</div>
+<section>
+  <div class="section-title"><h2>Sobre Mim</h2></div>
+  <div class="about">
+    <p>Sou Vitória Resinente, fotógrafa profissional apaixonada por registrar histórias reais com sensibilidade e qualidade.</p>
+    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e">
+  </div>
 </section>
 
-<section class="profissionais">
-<h2>Profissionais com ampla experiência</h2>
+<section>
+  <div class="section-title"><h2>Depoimentos</h2></div>
+  <div class="testimonials">
+    <div class="testimonial">“Fotos incríveis e atendimento maravilhoso.”</div>
+    <div class="testimonial">“Trabalho impecável, recomendo!”</div>
+  </div>
 </section>
 
-<section class="servicos" id="servicos">
-<h2>Trabalhamos com as melhores marcas do mercado</h2>
-<div class="cards">
-<div class="card"><img src="https://images.unsplash.com/photo-1581579185169-46b9f8c9b5a0?q=80&w=800"><span>Instalação</span></div>
-<div class="card"><img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?q=80&w=800"><span>Manutenção</span></div>
-<div class="card"><img src="https://images.unsplash.com/photo-1618220179428-22790b461013?q=80&w=800"><span>Venda</span></div>
-</div>
+<section class="contact">
+  <h2>Vamos conversar?</h2>
+  <p>Atendimento em Niterói e região</p>
+  <p><strong>WhatsApp:</strong> (21) 99709-2332</p>
 </section>
 
-<section class="cta" id="contato">
-<h2>Entre em contato e conheça a melhor solução para você.</h2>
-<a href="https://wa.me/5551998961031" target="_blank">Atendimento Online</a>
-</section>
+<footer>© 2025 Vitória Resinente – Fotografia Profissional</footer>
 
-<footer>
-<div class="footer-grid">
-<div><img src="https://i.imgur.com/8ZQZ7Zy.png" style="height:40px"></div>
-<div>
-<h3>Contato</h3>
-<p>(51) 9 9896-1031</p>
-<p>proaquecedores@gmail.com</p>
-<p>Canoas - RS</p>
-</div>
-<div>
-<h3>Menu</h3>
-<a href="#inicio">Início</a>
-<a href="#servicos">Serviços</a>
-<a href="#sobre">Quem Somos</a>
-<a href="#contato">Contato</a>
-</div>
-</div>
-<div class="copy">© 2023 Pro Aquecedores</div>
-</footer>
+<a class="whatsapp" href="https://wa.me/5521997092332" target="_blank">💬</a>
 
-<!-- BOTÃO WHATSAPP -->
-<a class="whatsapp-float" href="https://wa.me/5551998961031" target="_blank">
-<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
-</a>
+<!-- POPUP -->
+<div class="popup-bg" id="popup">
+  <div class="popup">
+    <h3>Bem-vinda 💛</h3>
+    <p>Posso te ajudar a escolher o ensaio ideal?</p>
+    <input id="nome" placeholder="Seu nome">
+    <input id="whats" placeholder="Seu WhatsApp">
+    <button onclick="enviarWhats()">Quero orçamento</button>
+    <div class="close" onclick="fecharPopup()">Fechar</div>
+    <small>Atendimento rápido pelo WhatsApp</small>
+  </div>
+</div>
+
+<script>
+const popup = document.getElementById('popup');
+
+setTimeout(()=>{
+  if(!sessionStorage.getItem('popupVisto')){
+    popup.style.display='flex';
+    sessionStorage.setItem('popupVisto',true);
+  }
+},5000);
+
+function abrirPopup(){popup.style.display='flex'}
+function fecharPopup(){popup.style.display='none'}
+
+function enviarWhats(){
+  const nome = document.getElementById('nome').value;
+  const whats = document.getElementById('whats').value;
+  if(!nome || !whats){
+    alert('Preencha nome e WhatsApp');
+    return;
+  }
+  const msg = `Olá, meu nome é ${nome}. Meu WhatsApp é ${whats}. Gostaria de informações sobre ensaio fotográfico.`;
+  window.open(`https://wa.me/5521997092332?text=${encodeURIComponent(msg)}`,'_blank');
+}
+</script>
 
 </body>
 </html>
